News UAT/force-app/main/default/objects/NewsXtendIORef__c/NewsXtendIORef__c.object-meta.xml
<CustomObject>
    <description>Reference data for use in each section of the NewsXtend insertion Order</description>
    <label>NewsXtendIORef</label>
    <nameField>
        <label>NewsXtendIORef Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewsXtendIORefs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>