News UAT/force-app/main/default/objects/NewsXtendIORef__c/fields/Campaign_Element__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Element__c</fullName>
    <description>The name of the section within the IO Sheet</description>
    <inlineHelpText>Enter the name of this section of the IO Sheet. Please ensure you include any associated X_____ signature text if required</inlineHelpText>
    <label>Campaign Element</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>