News UAT/force-app/main/default/objects/NewsXtendIORef__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>The summary details for this Campaign Element.</description>
    <inlineHelpText>This field should contain the summary text to be displayed for this part of the IO Sheet. If a number of impressions etc is required to be entered simply enter 0 and it will be automatically replaced with the actual value eg &quot;Impression 0&quot;</inlineHelpText>
    <label>Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>