News UAT/force-app/main/default/objects/NewsXtendIORef__c/fields/Details_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Details_Rich_Text__c</fullName>
    <label>Details Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>