News UAT/force-app/main/default/objects/NewsXtendIORef__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>The order in which this Campaign Element should be displayed on the Insertion Order</description>
    <inlineHelpText>The order in which this Campaign Element should be displayed on the Insertion Order</inlineHelpText>
    <label>Display Order</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>