News UAT/force-app/main/default/objects/NewsXtendIORef__c/fields/Fulfilment_Details__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Details__c</fullName>
    <description>This field contains the text that will be placed on the IO sheet for the section Fulfillment: How we will work with you</description>
    <inlineHelpText>Enter the text you want to see for the IO sheet section : Fulfillment: How we will work with you</inlineHelpText>
    <label>Fulfilment Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>