News UAT/force-app/main/default/objects/NewsXtendIORef__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>An work variable to record the total number of Impressions, Clicks etc to be provided as part of this section of the insertion order</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>