News UAT/force-app/main/default/objects/NewsXtendIORef__c/fields/Total_Value_Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Attribute_Name__c</fullName>
    <description>Helper field that should contain name of attribute on News Xtend whose value needs to be summarized and displayed for this Product Group as part of Details text (i.e. Details Text/Rich Text contains &lt;0&gt; )</description>
    <inlineHelpText>Helper field that should contain name of attribute on News Xtend whose value needs to be summarized and displayed for this Product Group as part of Details text (i.e. Details Text/Rich Text contains &lt;0&gt; )</inlineHelpText>
    <label>Total Value Attribute Name</label>
    <type>TextArea</type>
</CustomField>