News UAT/force-app/main/default/objects/NewsXtendIORef__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Display_Order__c</columns>
    <columns>Campaign_Element__c</columns>
    <columns>Details_Rich_Text__c</columns>
    <columns>Total_Value_Attribute_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>